--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="red"> <!-- the grandest grandparent div -->
       <div id="orange">
         <div id="yellow">
-          <di id="green">
+          <div id="green">
             <div id="blue">
               <div id="indigo">
                 <div id="violet"></div> <!-- the grandest child div -->
@@ -21,6 +21,7 @@
           </div>
         </div>
       </div>
+    </div>
 
   </body>
 
